--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Ryo Igarashi <n33t5hin@gmail.com>",
   "license": "AGPL-3.0",
   "scripts": {
-    "start": "npm run watch:server& npm run watch:client&",
+    "start": "node ./dist/main.js",
     "test": "run-s test:*",
     "test:jest": "jest --coverage",
     "test:eslint": "eslint '{client,server}/**/*.{ts,tsx}'",
